CHANGES IN FLTK 1.3.0

	- Added callback when double-clicking file in a file chooser
	  (STR #2346)
	- Fixed label alignment (STR #2436)
	- Added interface to set color chooser mode (STR #2407)
	- Fixed compile errors when HAVE_LIBJPEG was not defined 
	  (STR #2382)
	- Fixed special handling for ISO back-tab keycode (STR #2369)
	- Fixed wrong relative path (STR #2384)
	- Fixed static allocation in Fl_Tabs (STR #2370)
	- Fixed Fl_Widget::measure_label() to const (STR #2406)
	- Added step by step README's for MSWindows, OS X, and four
	  Linux distros
	- Fixed unbalanced Windows OleInitialize/OleUnitialize calls
	  when loading/unloading the FLTK dll (STR #2417)
	- Fixed X11/XDBE double buffering (STR #2152, #2197)
	- Added new label and image alignments (STR #2269)
	- Added documentation for event delivery (STR #1983)
	- Fixed menu and tooltip window animation bug under X11 (compiz)
	  by setting an appropriate window type (STR #2082)
	- redesigned CMake files (STR #2317).
	- Fixed max. fd calculation, if USE_POLL is enabled (STR #2324)
	- Fixed clipping for offscreen rendering (OSX, STR #2330)
	- Added printing support (Fl_Printer class and friends) for native
	  printing on Windows and Mac OS X, PostScript printing on X11
	  with CUPS or lp, and PostScript file output on all platforms
	- Added basic Fl_Device abstraction layer for all drawing functions
	- Fixed possibility of wrong flags() in Fl_Window::iconlabel()
	  (STR #2161)
	- Fixed Scrollbar events when max is less than min (STR #2283)
	- Added argument-less constructor in Fuid Widget Class
	- Fixed menu item counting issue in Fluid (STR #2322)
	- Added Fl_Menu_::find_item by callback
	- Removed redundant Fl_Group casts
	- Added indexing to Fl_Preferences
	- Integrated default menu into Demo test app
	- Added automated Xcode IDE file generation to Fluid
	- Fixed lost top item in Fluid's tree browser (STR #2233)
	- Fixed crash in test/Editor when freeing buffer 
	  too soon (STR #2294) 